--- a/.github/workflows/global_update.yml
+++ b/.github/workflows/global_update.yml
@@ -59,8 +59,8 @@ jobs:
           python scripts/scrap_places.py
           
           # Vérifications
-          ls -l hemicycle.svg || echo "⚠️ SVG non généré"
-          ls -l public/data/places_mapping.json || echo "⚠️ Mapping places non généré"
+          ls -l public/data/hemicycle_svg/hemicycle.svg || echo "⚠️ SVG non généré"
+          ls -l public/data/place_mapping/places_mapping.json || echo "⚠️ Mapping non généré"
 
       # --- ETAPE 3 : COMMIT UNIQUE ---
       - name: Commit & Push Changes (Main)
@@ -71,7 +71,6 @@ jobs:
 
           # On ajoute tout ce qui a pu changer dans public/data
           git add public/data
-          git add hemicycle.svg
 
           # Vérification s'il y a des changements réels
           if git diff --cached --quiet; then
